--- a/app/frontend/src/app/pages/search/search.component.css
+++ b/app/frontend/src/app/pages/search/search.component.css
@@ -106,6 +106,11 @@ td {
     width: 74.31059%;
   }
 }
+@media (min-width: 1330px) {
+  #btn-show-filters {
+    display: none !important;
+  }
+}
 @media (max-width: 1330px) {
   #btn-show-filters {
     display: block;
