Removed best in clase icon in BMO and PSS

--- a/app/frontend/src/app/pages/contract-vehicles/bmo-info.component.html
+++ b/app/frontend/src/app/pages/contract-vehicles/bmo-info.component.html
@@ -8,7 +8,7 @@
 
   <section class="usa-section">
     <div class="usa-grid">
-      <div class="usa-width-one-sixth best-in-class"></div>
+      <div class="usa-width-one-sixth"></div>
       <div class="usa-width-one-half">
         <p class="usa-font-lead">Building Maintenance and Operations (BMO) strategic sourcing solution is a
           comprehensive
