--- a/app/frontend/src/app/pages/contracts/contracts.component.html
+++ b/app/frontend/src/app/pages/contracts/contracts.component.html
@@ -1,7 +1,7 @@
 <main id="main-content">
   <section class="usa-hero">
     <div class="usa-grid text-center">
-      <h1>Resources</h1>
+      <h1>Contracts</h1>
     </div>
   </section>
   <section class="usa-section usa-graphic_list">
