--- a/app/frontend/src/app/pages/welcome/welcome.component.html
+++ b/app/frontend/src/app/pages/welcome/welcome.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="usa-width-one-whole pad-top">
       <div class="usa-width-one-fourth">
-        <h2>OASIs</h2>
+        <h2>OASIS</h2>
         <p>One Acquisition Solution for Integrated Service</p>
         <button class="usa-button-secondary" aria-label="Learn more about OASIs" [routerLink]="['/oasis']">Learn more</button>
       </div>
