--- a/app/frontend/src/app/pages/contract-vehicles/oasis-sb-info.component.html
+++ b/app/frontend/src/app/pages/contract-vehicles/oasis-sb-info.component.html
@@ -29,7 +29,8 @@
         <h3>OASIS and OASIS SB Pool Disciplines</h3>
         <div *ngIf="pools.length===0">Loading...</div>
         <ul *ngIf="pools.length>0" class="usa-font-lead">
-          <li *ngFor="let pool of pools"><a [routerLink]="['/search']" [queryParams]="{vehicles: 'OASIS_SB', service_categories: pool.id}">{{pool.name}}</a></li>
+          <li *ngFor="let pool of pools"><a [routerLink]="['/search']" [queryParams]="{vehicles: 'OASIS_SB', service_categories: pool.id}">{{pool.name}}
+              - {{pool.number}}</a></li>
         </ul>
       </div>
       <div class="usa-width-one-fourth">
