--- a/app/frontend/src/app/pages/search/filters/filter-agency-performance.component.html
+++ b/app/frontend/src/app/pages/search/filters/filter-agency-performance.component.html
@@ -3,19 +3,16 @@
 </button>
 <div id="{{id}}" class="usa-accordion-content" [attr.aria-hidden]="!opened">
   <div class="usa-search form-horizontal">
-    <discovery-spinner *ngIf="!items"></discovery-spinner>
-    <select id="select_agency" [disabled]="!items" [(ngModel)]="agency" class="items-input">
-      <option value="0" selected="selected">Select agency --</option>
-      <option *ngFor="let item of items" value="{{item.id}}">{{item.description}}</option>
-    </select>
-    <button class="icon-plus btn-plus" type="submit" (click)="addAgency()" [disabled]="!items || agency === '0'">
-      <span class="usa-sr-only">Add Agency to list</span>
-    </button>
+    <fieldset class="usa-fieldset-inputs usa-sans">
+      <discovery-spinner *ngIf="!items"></discovery-spinner>
+      <ul class="usa-unstyled-list">
+        <li *ngFor="let item of items">
+          <input (change)="onChange(item.code, item.description, $event.target.checked)" id="{{id}}-{{item.code}}" type="checkbox"
+            value="{{item.code}}" [checked]="item.checked">
+          <label for="{{id}}-{{item.code}}">{{item.description}}</label>
+        </li>
+      </ul>
+    </fieldset>
   </div>
-  <ul *ngIf="items_selected" class="items-selected">
-    <li *ngFor="let agency of items_selected">
-      <a (click)="removeItem(agency.value)" title="Remove {{agency.description}}"><span class="usa-sr-only">Remove {{agency.description}}</span></a>{{agency.description}}
-    </li>
-  </ul>
 
 </div>
