--- a/app/frontend/src/app/pages/search/tbl-vendors.component.css
+++ b/app/frontend/src/app/pages/search/tbl-vendors.component.css
@@ -1,5 +1,5 @@
 .usa-table-borderless thead th:first-child,
 .usa-table-borderless tbody td:first-child {
-  min-width: auto !important;
+  width: 50px;
   max-width: auto !important;
 }
