--- a/app/frontend/src/app/pages/search/search.component.html
+++ b/app/frontend/src/app/pages/search/search.component.html
@@ -13,7 +13,6 @@
     </div>
   </div>
 </div>
-
 <!-- Server Error Notification -->
 <div class="usa-grid col-container pad-top-bottom" *ngIf="!server_error">
   <div>
@@ -53,107 +52,129 @@
 
             <!-- Contracts results -->
             <div *ngIf="vw_contracts">
-              <div class="usa-alert usa-alert-info" *ngIf="vendors_no_results">
+              <div class="usa-alert usa-alert-info" *ngIf="vendors_no_results || total_vendors_met_criteria===0">
                 <div class="usa-alert-body">
                   <h3 class="usa-alert-heading">No results based on your criteria</h3>
                   <p class="usa-alert-text">Please change your criteria and re-submit.</p>
                 </div>
               </div>
 
-              <div class="text-right pad-all" *ngIf="scroll_buttons"><a (click)="scrollRight()">Scroll to see more ></a></div>
-              <div id="overflow-compare" class="overflow" *ngIf="!vendors_no_results">
 
-                <div class="usa-alert usa-alert-info" *ngIf="contracts_w_no_records.length>0">
-                  <div class="usa-alert-body">
-                    <h3 class="usa-alert-heading">There are no vendor results for:
-                    </h3>
-                    <strong class="db" [innerHTML]="commaSeparatedList(contracts_w_no_records, 'name')"></strong>
-                    <p class="usa-alert-text">Please change your criteria and re-submit.</p>
+              <div id="overflow-compare" *ngIf="!vendors_no_results">
+                <!-- Start Scroll Window -->
+                <div class="scroll-view-topscroll scrollbar">
+                  <div class="scroll-div1">
                   </div>
                 </div>
-                <table id="tbl-compare" class="usa-table-borderless">
-                  <thead>
-                    <tr>
-                      <th scope="col"></th>
-                      <th scope="col" class="th-vehicle" *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.description}}
-                        <!--<span
-                              class="info-tip"></span>-->
-                      </th>
-                      <!-- <th scope="col" *ngFor="let vehicle of compare_tbl"><a (click)="openModal(vehicle.id)">{{vehicle.description}}
-                            <span
-                              class="info-tip"></span></a></th> -->
+                <div class="scroll-view scrollbar">
+                  <div class="scroll-div2">
+                    <div class="usa-alert usa-alert-info" *ngIf="contracts_w_no_records.length>0 && total_vendors_met_criteria!==0">
+                      <div class="usa-alert-body">
+                        <h3 class="usa-alert-heading">There are no vendor results for:
+                        </h3>
+                        <strong class="db" [innerHTML]="commaSeparatedList(contracts_w_no_records, 'name')"></strong>
+                        <p class="usa-alert-text">Please change your criteria and re-submit.</p>
+                      </div>
+                    </div>
+                    <div [hidden]="total_vendors_met_criteria===0">
+                      <div class="pad-top">
+                        <button class="usa-button-secondary" (click)="toggleMoreInfo()">{{!more_info
+                          ?
+                          'Show' : 'Hide'}} more contract details</button></div>
 
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <th scope="row">Total vendors</th>
-                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.vendors_total}}</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">Vendors that meet your criteria </th>
-                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0"><span *ngIf="vehicle.vendors_results_total===0">{{vehicle.vendors_results_total}}</span><button
-                          *ngIf="vehicle.vendors_results_total!=0" (click)="viewVehicleVendors(vehicle.id)">{{vehicle.vendors_results_total}}</button></td>
-                    </tr>
-                    <tr>
-                      <th scope="row">Eligible Service category(s) <discovery-lnk-toggle-heights [toggle_id]="'row-serv-cat'"
-                          (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights>
-                      </th>
-                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
-                        <div class="row-serv-cat toggle_more">
-                          <discovery-list [show_all]="true" [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.service_categories"
-                            [key]="'name'"></discovery-list>
-                          <div class="gradient"></div>
-                        </div>
-                      </td>
-                    </tr>
-                    <!-- <tr>
-                        <th scope="row">Top capabilities</th>
-                        <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.capabilities}}</td>
-                      </tr> -->
-                    <tr>
-                      <th scope="row">NAICs <discovery-lnk-toggle-heights [toggle_id]="'row-naics'" (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights>
-                      </th>
-                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
-                        <div class="row-naics toggle_more">
-                          <discovery-list [show_all]="true" [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.naics"
-                            [key]="'code'"></discovery-list>
-                          <div class="gradient"></div>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <th scope="row">PSCs <discovery-lnk-toggle-heights [toggle_id]="'row-pscs'" (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights>
-                      </th>
-                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
-                        <div class="row-pscs toggle_more">
-                          <discovery-list [show_all]="true" [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.pscs"
-                            [key]="'code'"></discovery-list>
-                          <div class="gradient"></div>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <th scope="row">SUM Tier</th>
-                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.tier}}</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">GSA Point of Contact</th>
-                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0"><a href="mailto:{{vehicle.gsa}}"
-                          *ngIf="vehicle.gsa !== ''">Contact email</a></td>
-                    </tr>
-                    <!-- <tr>
-                      <th scope="row">Solution Website</th>
-                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.website}}</td>
-                    </tr> -->
-                    <tr>
-                      <th scope="row">Ordering Guide</th>
-                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0"><a href="{{vehicle.ordering_guide}}"
-                          title="Ordering guide for " *ngIf="vehicle.ordering_guide !== ''" target="_blank">Download
-                          Guide</a></td>
-                    </tr>
-                  </tbody>
-                </table>
+                      <table id="tbl-compare" class="usa-table-borderless margin-bottom">
+                        <thead>
+                          <tr>
+                            <th scope="col"></th>
+                            <th scope="col" class="th-vehicle" *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.description}}
+                              <!--<span
+                    class="info-tip"></span>-->
+                            </th>
+                            <!-- <th scope="col" *ngFor="let vehicle of compare_tbl"><a (click)="openModal(vehicle.id)">{{vehicle.description}}
+                  <span
+                    class="info-tip"></span></a></th> -->
+
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <!-- <tr>
+                            <th scope="row">Total vendors</th>
+                            <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.vendors_total}}</td>
+                          </tr> -->
+                          <tr>
+                            <th scope="row">Vendors that meet your criteria </th>
+                            <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0"><span
+                                *ngIf="vehicle.vendors_results_total===0">{{vehicle.vendors_results_total}}</span><button
+                                *ngIf="vehicle.vendors_results_total!=0" (click)="viewVehicleVendors(vehicle.id)">{{vehicle.vendors_results_total}}</button></td>
+                          </tr>
+                          <tr>
+                            <th scope="row">Eligible Service category(s)
+                              <!-- <discovery-lnk-toggle-heights [toggle_id]="'row-serv-cat'"
+                                (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights> -->
+                            </th>
+                            <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
+                              <div class="row-serv-cat toggle_more" [class.show_all]="more_info">
+                                <discovery-list [show_all]="true" [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.service_categories"
+                                  [key]="'name'"></discovery-list>
+                                <div class="gradient"></div>
+                              </div>
+                            </td>
+                          </tr>
+                          <!-- <tr>
+              <th scope="row">Top capabilities</th>
+              <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.capabilities}}</td>
+            </tr> -->
+                          <tr>
+                            <th scope="row">NAICs
+                              <!-- <discovery-lnk-toggle-heights [toggle_id]="'row-naics'" (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights> -->
+                            </th>
+                            <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
+                              <div class="row-naics toggle_more" [class.show_all]="more_info">
+                                <discovery-list [show_all]="true" [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.naics"
+                                  [key]="'code'"></discovery-list>
+                                <div class="gradient"></div>
+                              </div>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row">PSCs
+                              <!-- <discovery-lnk-toggle-heights [toggle_id]="'row-pscs'" (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights> -->
+                            </th>
+                            <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
+                              <div class="row-pscs toggle_more" [class.show_all]="more_info">
+                                <discovery-list [show_all]="true" [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.pscs"
+                                  [key]="'code'"></discovery-list>
+                                <div class="gradient"></div>
+                              </div>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row">SUM Tier</th>
+                            <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.tier}}</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">GSA Point of Contact</th>
+                            <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0"><a
+                                href="mailto:{{vehicle.gsa}}" *ngIf="vehicle.gsa !== ''">Contact email</a></td>
+                          </tr>
+                          <!-- <tr>
+            <th scope="row">Solution Website</th>
+            <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.website}}</td>
+          </tr> -->
+                          <tr>
+                            <th scope="row">Ordering Guide</th>
+                            <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0"><a
+                                href="{{vehicle.ordering_guide}}" title="Ordering guide for " *ngIf="vehicle.ordering_guide !== ''"
+                                target="_blank">Download
+                                Guide</a></td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+                <!-- End Scroll Window -->
+
 
               </div>
             </div>
@@ -167,12 +188,9 @@
               </div>
               <div *ngIf="!vendors_no_results">
                 <div class="usa-grid-full">
-                  <div class="usa-width-one-whole">
-
-                    <h3 class="no-pad-left">{{results.vendors.length}} vendors match your filter criteria</h3>
+                  <div class="usa-width-one-whole" [hidden]="spinner">
                     <fieldset class="usa-fieldset-inputs usa-sans inputs-inline" *ngIf="results.vehicles.length>1">
                       <legend>List by:</legend>
-
                       <ul class="usa-unstyled-list">
                         <li *ngFor="let vehicle of compare_tbl; let i = index" [hidden]="vehicle.vendors_results_total===0">
                           <input id="r-{{vehicle.id}}" type="radio" [checked]="i===0" [(ngModel)]="sort_by" name="sort_by"
@@ -186,7 +204,8 @@
                 </div>
 
                 <div class="overflow">
-                  <discovery-tbl-vendors [vehicle]="sort_by" (emitActivateSpinner)="showSpinner($event)"></discovery-tbl-vendors>
+                  <discovery-tbl-vendors [total_vendors]="vehicle_vendors_total" [obligated_amounts_list]="obligated_amounts_list"
+                    [vehicle]="sort_by" (emitActivateSpinner)="showSpinner($event)"></discovery-tbl-vendors>
                 </div>
               </div>
             </div>
