--- a/app/frontend/src/app/pages/search/tbl-contract-history.component.css
+++ b/app/frontend/src/app/pages/search/tbl-contract-history.component.css
@@ -2,11 +2,21 @@
   min-width: auto !important;
 }
 table {
-  margin-top: 0px !important;
+  margin: 0px !important;
+  margin-bottom: 20px !important;
+  width: 99.5% !important;
 }
 tbody th {
   vertical-align: top !important;
 }
+thead td:first-child,
+tbody td:first-child {
+  padding-right: 0px !important;
+}
 .filters-container {
   padding: 20px 20px 20px 10px !important;
+}
+.col-small {
+  width: 50px !important;
+  min-width: auto !important;
 }
