--- a/app/frontend/src/styles.css
+++ b/app/frontend/src/styles.css
@@ -44,9 +44,19 @@ a {
 .pull-right {
   float: right;
 }
-
 .pull-left {
   float: left;
+}
+.ul-no-bullets {
+  margin: 0;
+  padding: 0 0 0 10px;
+}
+.ul-no-bullets li {
+  list-style: none;
+}
+.ul-no-bullets li:before {
+  content: '- ';
+  margin-left: -10px;
 }
 .icon-arrow-left {
   display: inline-block;
@@ -214,6 +224,37 @@ ul.items-selected li a {
   display: inline-block !important;
   margin-right: 0px !important;
 }
+/* START scrollwindows */
+.scroll-view-topscroll,
+.scroll-view,
+.scroll-div1 {
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+.scroll-view-topscroll,
+.scroll-div1 {
+  height: 20px;
+}
+.scroll-div1,
+.scroll-div2 {
+  min-width: 600px;
+}
+.scrollbar,
+.scrollbar::-webkit-scrollbar {
+  background-color: #fff;
+}
+.scrollbar::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgb(34, 120, 201);
+  background-color: rgb(34, 66, 172);
+}
+
+.scrollbar::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgb(34, 120, 201);
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+/* END scrollwindows */
 /* START Tabs styles */
 .info-tip {
   display: inline-block;
@@ -394,6 +435,7 @@ caption {
 table {
   width: 100%;
   border-top: 3px solid #0071bc;
+  margin: 0px !important;
 }
 caption {
   font-size: 1.3em;
@@ -415,7 +457,11 @@ table.usa-table-borderless tbody td {
 table.usa-table-borderless tbody td:first-child {
   border-left: 0px !important;
 }
-
+table.usa-table-borderless tbody td:first-child,
+table.usa-table-borderless tbody th,
+table.usa-table-borderless thead th:first-child {
+  padding-left: 10px !important;
+}
 thead th {
   border-bottom: 3px solid #0071bc;
 }
@@ -440,6 +486,11 @@ td.sbd {
 }
 td {
   vertical-align: top !important;
+}
+th[hidden='true'],
+td[hidden='true'] {
+  padding: 0px !important;
+  width: 1px !important;
 }
 .bordered {
   border: 2px solid #e1e6ea;
@@ -626,7 +677,7 @@ body.modal-open {
 .tooltip {
   position: relative;
   cursor: pointer;
-  z-index: 9999;
+  z-index: 300;
 }
 
 /* Base styles for the entire tooltip */
